manifest/objects/ALTF__LOR_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__ConcatenatedFields__c</fullName>
        <formula>CASESAFEID(ALTF__Contact__c) &amp; CASESAFEID(ALTF__User__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenatedFields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Altify Contact Users</relationshipLabel>
        <relationshipName>Altify_Contact_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__CurrentLOR__c</fullName>
        <label>CurrentLOR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <label>0. Unknown</label>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                    <label>1. Vendor</label>
                </value>
                <value>
                    <fullName>Credible Source</fullName>
                    <label>2. Credible Source</label>
                </value>
                <value>
                    <fullName>Problem Solver</fullName>
                    <label>3. Problem Solver</label>
                </value>
                <value>
                    <fullName>Trusted Advisor</fullName>
                    <label>4. Trusted Advisor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__DesiredLOR__c</fullName>
        <label>DesiredLOR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <label>0. Unknown</label>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                    <label>1. Vendor</label>
                </value>
                <value>
                    <fullName>Credible Source</fullName>
                    <label>2. Credible Source</label>
                </value>
                <value>
                    <fullName>Problem Solver</fullName>
                    <label>3. Problem Solver</label>
                </value>
                <value>
                    <fullName>Trusted Advisor</fullName>
                    <label>4. Trusted Advisor</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Altify_Contact_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Altify LOR Relationship</label>
    <nameField>
        <label>Altify Contact User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify LOR Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>